--- a/Registration.html
+++ b/Registration.html
@@ -28,6 +28,10 @@
                 <br>
                 <input type = "password" name = "password" id = "name" placeholder = "Enter Your Password">
                 <br><br>
+                <label>Confirm Password : </label>
+                <br>
+                <input type = "password" name = "password" id = "name" placeholder = "Confirm Your Password">
+                <br><br>
                 <label>Gender : </label>
                 <br>
                 &nbsp;&nbsp;&nbsp;
